--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,3 +1,4 @@
+@"
 [project]
 name = "velaris"
 version = "0.1.0"
@@ -8,6 +9,7 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "sqlalchemy[asyncio]>=2.0.25",
     "asyncpg>=0.29.0",
+    "psycopg2-binary>=2.9.9",
     "alembic>=1.13.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
@@ -20,14 +22,13 @@ dependencies = [
     "email-validator>=2.1.0",
     "openpyxl>=3.1.0",
     "reportlab>=4.0.0",
+    "python-multipart>=0.0.6",
 ]
-
 [project.optional-dependencies]
 dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]
-
 [tool.ruff]
 line-length = 100
 target-version = "py311"
-
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+"@ | Out-File -Encoding UTF8 backend\pyproject.toml
