ultima correção, para rodar o script de super admin

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,3 +33,6 @@ target-version = "py311"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+
+[project.scripts]
+create-superadmin = "src.scripts.create_superadmin:main"
