fix: CORS com URL correta do backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,5 +41,9 @@ services:
         condition: service_healthy
     command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload
 
+
+  environment:
+  DATABASE_URL: "postgresql://postgres:YIffnOKDrYGj...@postgres.railway.internal:5432/railway"
+
 volumes:
   velaris_postgres_data:
