--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "openpyxl>=3.1.0",
     "reportlab>=4.0.0",
     "python-multipart>=0.0.6",
+    "twilio>=8.0.0",
 ]
 
 [project.optional-dependencies]
