feat: health check com monitoramento + notificação vendedor concisa

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,3 +21,6 @@ GUPSHUP_WEBHOOK_SECRET=
 VAPID_PUBLIC_KEY=BFY-H1Yl2i2XLOfJnsL8mnfXAQwynmBdQq5wWxXA6c7fdtdhCnuHvkubQ3R_q4w1xg0gsSdssODyqCU3cgJ21Cc
 VAPID_PRIVATE_KEY=OB8AiN9mF8E9WmHkvQ_Z4cJpeitRvRN1LyuqH8fgM8I
 VAPID_SUBJECT=mailto:douglas@velocebm.com
+
+
+ADMIN_WHATSAPP=5551994003224  # ← SEU WHATSAPP AQUI
