--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@
 ENVIRONMENT=development
 DATABASE_URL=postgresql+asyncpg://velaris:velaris123@localhost:5432/velaris_db
 OPENAI_API_KEY=sk-sua-chave-aqui
-OPENAI_MODEL=gpt-4o-mini
+OPENAI_MODEL=gpt-4o
 SECRET_KEY=chave-secreta-mude-em-producao
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 HOST=0.0.0.0
