--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,6 +11,10 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=true
 
+# CORS - URLs permitidas para acessar a API (separadas por vírgula)
+# Em produção, adicione a URL do frontend
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:8080,https://vellarys-production.up.railway.app
+
 # GUPSHUP (WhatsApp Business API)
 GUPSHUP_API_KEY=
 GUPSHUP_APP_NAME=
