--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,9 @@ apscheduler>=3.10.0
 pywebpush>=1.14.0
 python-jose[cryptography]>=3.3.0
 email-validator>=2.1.0
+# Novas dependências
+slowapi==0.1.9              # Rate limiting
+pandas==2.2.0               # Export CSV/Excel
+openpyxl==3.1.2             # Excel support
+resend==0.8.0               # Email service
+sentry-sdk[fastapi]==1.40.0 # Error tracking
