--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,3 +22,4 @@ pandas==2.2.0               # Export CSV/Excel
 openpyxl==3.1.2             # Excel support
 resend==0.8.0               # Email service
 sentry-sdk[fastapi]==1.40.0 # Error tracking
+numpy>=1.24.0                # Semantic Search
