fix: sync pyproject.toml dependencies with requirements.txt (fixes numpy crash)

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,14 @@ dependencies = [
     "reportlab>=4.0.0",
     "python-multipart>=0.0.6",
     "twilio>=8.0.0",
+    "redis>=5.0.0",
+    "pywebpush>=1.14.0",
+    "apscheduler>=3.10.0",
+    "slowapi==0.1.9",
+    "pandas>=2.2.0",
+    "resend>=0.8.0",
+    "sentry-sdk[fastapi]>=1.40.0",
+    "numpy>=1.24.0",
 ]
 
 [project.optional-dependencies]
