feat: implementa Redis cache e rate limiting distribuído para escalabilidade

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,30 +1,95 @@
 # VELARIS - Configurações
 # Copie para .env e preencha
+# Última atualização: 20/01/2026
 
+# ============================================
+# CORE (OBRIGATÓRIOS)
+# ============================================
 ENVIRONMENT=development
 DATABASE_URL=postgresql+asyncpg://velaris:velaris123@localhost:5432/velaris_db
 OPENAI_API_KEY=sk-sua-chave-aqui
 OPENAI_MODEL=gpt-4o
 SECRET_KEY=chave-secreta-mude-em-producao
-ACCESS_TOKEN_EXPIRE_MINUTES=1440
 HOST=0.0.0.0
 PORT=8000
 DEBUG=true
 
-# CORS - URLs permitidas para acessar a API (separadas por vírgula)
-# Em produção, adicione a URL do frontend
+# ============================================
+# SUPERADMIN (OBRIGATÓRIOS EM PRODUÇÃO)
+# ============================================
+SUPERADMIN_EMAIL=admin@empresa.com
+SUPERADMIN_PASSWORD=senha-forte-aqui
+SUPERADMIN_TENANT_NAME=Admin Tenant
+SUPERADMIN_TENANT_SLUG=admin
+
+# ============================================
+# REDIS (RECOMENDADO PARA ESCALA > 3 CLIENTES)
+# ============================================
+# Em Railway: Adicionar Redis e copiar a URL
+# REDIS_URL=redis://default:xxx@xxx.railway.app:6379
+
+# ============================================
+# DATABASE POOL (AJUSTAR CONFORME CARGA)
+# ============================================
+# Padrão é suficiente para até 6 clientes
+DB_POOL_SIZE=15
+DB_MAX_OVERFLOW=30
+DB_POOL_RECYCLE=3600
+DB_POOL_TIMEOUT=30
+
+# ============================================
+# AUTH
+# ============================================
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# ============================================
+# CORS - URLs permitidas
+# ============================================
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:8080,https://vellarys-production.up.railway.app
 
+# ============================================
+# Z-API (WhatsApp)
+# ============================================
+ZAPI_INSTANCE_ID=
+ZAPI_TOKEN=
+ZAPI_CLIENT_TOKEN=
+
+# ============================================
 # GUPSHUP (WhatsApp Business API)
+# ============================================
 GUPSHUP_API_KEY=
 GUPSHUP_APP_NAME=
 GUPSHUP_SOURCE_PHONE=
 GUPSHUP_WEBHOOK_SECRET=
 
+# ============================================
+# 360DIALOG (WhatsApp)
+# ============================================
+DIALOG360_API_KEY=
+WEBHOOK_VERIFY_TOKEN=velaris_webhook_token
 
-VAPID_PUBLIC_KEY=BFY-H1Yl2i2XLOfJnsL8mnfXAQwynmBdQq5wWxXA6c7fdtdhCnuHvkubQ3R_q4w1xg0gsSdssODyqCU3cgJ21Cc
-VAPID_PRIVATE_KEY=OB8AiN9mF8E9WmHkvQ_Z4cJpeitRvRN1LyuqH8fgM8I
-VAPID_SUBJECT=mailto:douglas@velocebm.com
+# ============================================
+# PUSH NOTIFICATIONS (VAPID)
+# ============================================
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+VAPID_SUBJECT=mailto:contato@velaris.app
 
+# ============================================
+# EMAIL (Resend)
+# ============================================
+RESEND_API_KEY=
+EMAIL_FROM=noreply@vellarys.app
+FRONTEND_URL=http://localhost:3000
 
-ADMIN_WHATSAPP=5551994003224  # ← SEU WHATSAPP AQUI
+# ============================================
+# MONITORAMENTO (Sentry)
+# ============================================
+SENTRY_DSN=
+
+# ============================================
+# ADMIN
+# ============================================
+ADMIN_WHATSAPP=5551999999999
+
