--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "resend>=0.8.0",
     "sentry-sdk[fastapi]>=1.40.0",
     "numpy>=1.24.0",
+    "python-slugify>=8.0.0",
+    "cryptography>=42.0.0",
 ]
 
 [project.optional-dependencies]
