--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,3 +23,5 @@ openpyxl==3.1.2             # Excel support
 resend==0.8.0               # Email service
 sentry-sdk[fastapi]==1.40.0 # Error tracking
 numpy>=1.24.0                # Semantic Search
+python-slugify>=8.0.0
+cryptography>=42.0.0
