fix(auth): switch to PBKDF2-SHA256 to fix 72-char limit and server binary issues

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,8 +8,8 @@ pydantic
 python-dotenv
 httpx
 openai
-passlib[bcrypt,argon2]
-argon2-cffi>=23.1.0
+passlib[bcrypt]
+# argon2-cffi removido para compatibilidade total
 python-multipart
 alembic
 redis
