--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
@@ -19,13 +20,15 @@
     "@sentry/nextjs": "^10.34.0",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.2.0",
     "lucide-react": "^0.555.0",
     "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-grid-layout": "^1.5.0",
-    "sonner": "^1.4.3"
+    "sonner": "^1.4.3",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
